--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/Miscellaneous-Pk/Make-a-story/issues"
   },
-  "homepage": "https://github.com/Miscellaneous-Pk/Make-a-story#readme"
+  "homepage": "https://github.com/Miscellaneous-Pk/Make-a-story#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "hbs": "^4.0.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.4"
+  }
 }
