Mongoose and mongo environment is now working. Now bring user's name email and password from .hbs to database.

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "test": {
-    "PORT": 3000
+    "PORT": 3000, "MONGODB_URI": "mongodb://localhost:27017/users"
   },
   "development": {
-    "PORT": 3000
+    "PORT": 3000, "MONGODB_URI": "mongodb://localhost:27017/users"
   }
 }
