--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hbs": "^4.0.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.8"
+    "mongoose": "^5.4.8",
+    "nodemailer": "^5.1.1"
   }
 }
