--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "jsonwebtoken": "^8.4.0",
